# pawssistant

./: .metadata  CLAUDE.md  README.md  analysis_options.yaml  pubspec.yaml
.claude/hooks/: vibe_task_update.ps1
assets/scripts/: vibe_task_update.ps1
lib/: app.dart  main.dart
lib/config/: apps_config.json  constants.dart  platform.dart  settings.dart
lib/core/: sub_app.dart  sub_app_bootstrap.dart  sub_app_registry.dart
lib/models/: favorite_item.dart
lib/screens/: about_screen.dart  app_center_screen.dart  favorites_edit_screen.dart  menu_screen.dart  pet_screen.dart  settings_screen.dart  sub_app_window_screen.dart  todo_edit_screen.dart  todo_item_popup.dart  vibe_task_screen.dart
lib/services/: balance_service.dart  claude_hook_installer.dart  favorites_service.dart  log_service.dart  todo_service.dart  translate_service.dart  vibe_task_service.dart
lib/sub_apps/: image_handler_app.dart  screen_record_app.dart
lib/widgets/: app_square_panel.dart  balance_panel.dart  favorites_panel.dart  frosted_panel.dart  interactive_icon.dart  todo_panel.dart  translate_panel.dart  vibe_task_panel.dart
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
plugins/image_processer/: .metadata  CLAUDE.md  README.md  pubspec.yaml  run.bat
plugins/image_processer/example/: README.md  pubspec.yaml
plugins/image_processer/example/integration_test/: plugin_integration_test.dart
plugins/image_processer/example/lib/: main.dart
plugins/image_processer/example/lib/screens/: background_fill_screen.dart  canvas_expand_screen.dart  crop_rotate_screen.dart  format_convert_screen.dart  watermark_screen.dart
plugins/image_processer/example/macos/Flutter/: GeneratedPluginRegistrant.swift
plugins/image_processer/example/macos/Runner.xcodeproj/: project.pbxproj
plugins/image_processer/example/macos/RunnerTests/: RunnerTests.swift
plugins/image_processer/example/test/: widget_test.dart
plugins/image_processer/example/windows/: CMakeLists.txt
plugins/image_processer/example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
plugins/image_processer/example/windows/runner/: Runner.rc  main.cpp
plugins/image_processer/lib/: pawssistant_plugin_image_processer.dart  pawssistant_plugin_image_processer_method_channel.dart  pawssistant_plugin_image_processer_platform_interface.dart
plugins/image_processer/lib/src/: home_screen.dart  image_processor.dart
plugins/image_processer/lib/src/models/: crop_rect.dart  process_result.dart
plugins/image_processer/lib/src/processors/: background_filler.dart  canvas_expander.dart  crop_rotate_processor.dart  format_converter.dart  watermark_processor.dart
plugins/image_processer/lib/src/screens/: background_fill_screen.dart  (+4 more)
plugins/image_processer/macos/: pawssistant_plugin_image_processer.podspec
plugins/image_processer/macos/pawssistant_plugin_image_processer/: Package.swift
plugins/image_processer/test/: pawssistant_plugin_image_processer_method_channel_test.dart  pawssistant_plugin_image_processer_test.dart  watermark_processor_test.dart
plugins/image_processer/windows/: CMakeLists.txt  pawssistant_plugin_image_processer_plugin.cpp  pawssistant_plugin_image_processer_plugin.h  pawssistant_plugin_image_processer_plugin_c_api.cpp
plugins/image_processer/windows/test/: pawssistant_plugin_image_processer_plugin_test.cpp
plugins/screen_record/: README.md  pubspec.yaml
plugins/screen_record/example/: README.md  pubspec.yaml
plugins/screen_record/example/integration_test/: plugin_integration_test.dart
plugins/screen_record/example/lib/: main.dart
plugins/screen_record/example/test/: widget_test.dart
plugins/screen_record/example/windows/: CMakeLists.txt
plugins/screen_record/lib/: pawssistant_plugin_screen_record.dart  pawssistant_plugin_screen_record_method_channel.dart  pawssistant_plugin_screen_record_platform_interface.dart
plugins/screen_record/lib/models/: screen_record_config.dart
plugins/screen_record/lib/src/: recording_bar_screen.dart  screen_record_screen.dart
plugins/screen_record/macos/: pawssistant_plugin_screen_record.podspec
plugins/screen_record/macos/pawssistant_plugin_screen_record/: Package.swift
plugins/screen_record/test/: pawssistant_plugin_screen_record_method_channel_test.dart  pawssistant_plugin_screen_record_test.dart
plugins/screen_record/windows/: CMakeLists.txt  mf_encoder.cpp  mf_encoder.h  pawssistant_plugin_screen_record_plugin.cpp  pawssistant_plugin_screen_record_plugin.h  pawssistant_plugin_screen_record_plugin_c_api.cpp  screen_capture.cpp  screen_capture.h
plugins/screen_record/windows/include/pawssistant_plugin_screen_record/: pawssistant_plugin_screen_record_plugin_c_api.h
plugins/screen_record/windows/test/: pawssistant_plugin_screen_record_plugin_test.cpp
scripts/: defringe.py  flip_images.py  install_claude_hooks.ps1
sub_apps/image_handler/: pubspec.yaml
sub_apps/image_handler/lib/: image_handler_app.dart
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  flutter_window.cpp  main.cpp  win32_window.cpp  win32_window.h
(+17 files in other folders)
